--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.6",
     "argon2": "^0.44.0",
     "drizzle-orm": "^0.45.0",
+    "jodit-react": "^5.2.38",
     "mysql2": "^3.15.3",
     "next": "16.0.7",
     "react": "19.2.0",
