--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@uploadthing/react": "^7.3.3",
     "argon2": "^0.44.0",
     "drizzle-orm": "^0.45.0",
     "jodit-react": "^5.2.38",
+    "lucide-react": "^0.562.0",
     "mysql2": "^3.15.3",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
     "react-toastify": "^11.0.5",
+    "tw-animate-css": "^1.4.0",
+    "uploadthing": "^7.7.4",
     "zod": "^4.1.13"
   },
   "devDependencies": {
